tests/NormalTests/paczka1/fuzzy1/16943180.err
Error in line 9: r0X8Ty S737 72,5
Error in line 20: HfIDX S737 74,0
Error in line 17: 5gFP9psIL2 S748 36,4
Error in line 28: YAZL7O S748 316,2
Error in line 34: r0X8Ty S632 43,2
